# llm-server

./: .gitignore  README.md  main.py  openai-streaming-example.jsonl  out-formatted.json  out.json  pyproject.toml  sample-openai-response.json  trae-review.md
docs/: OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  SOPA_README.md
scripts/: __init__.py  benchmark.py  profiler.py
src/llm_server/: __init__.py  __main__.py  cli.py  server.py
tests/: __init__.py  conftest.py  test_generation_params.py  test_llm_server.py  test_sopa.py  test_streaming_format.py  test_streaming_manual.py  test_streaming_quick.py
