[project]
name = "llm-server"
version = "0.4.0"
description = "SOPA: Stream Optimization and Performance Accelerator - OpenAI-compatible LLM server with advanced caching, rate limiting, and performance optimizations"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Ugo" }
]
keywords = [
    "llm",
    "server",
    "openai",
    "api",
    "fastapi",
    "transformers",
    "optimization",
    "caching",
    "performance",
    "rocm",
    "amd"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "transformers>=4.45.0",
    "torch==2.10.0.dev20251110+rocm7.0",
    "pydantic>=2.12.0",
    "requests>=2.32.0",
    "accelerate",
]

[project.optional-dependencies]
quantization = [
    "bitsandbytes>=0.48.0",
]
gptq = [
    "auto-gptq>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
llm-server = "llm_server.cli:main"
llm-benchmark = "scripts.benchmark:main"
llm-profile = "scripts.profiler:main"

[project.urls]
Homepage = "https://github.com/ugo/llm-server"
Repository = "https://github.com/ugo/llm-server"
Documentation = "https://github.com/ugo/llm-server/blob/main/docs/SOPA_README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.0"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_server"]
